--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.2"
+    "dotenv": "^16.1.4",
+    "express": "^4.17.2",
+    "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.8.0",
