--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.17.2",
+    "react-router-dom": "^6.12.1",
     "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
