--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.17.2",
     "react-router-dom": "^6.12.1",
+    "sass": "^1.63.2",
     "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
